--- a/homecare.vcxproj
+++ b/homecare.vcxproj
@@ -88,6 +88,9 @@
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="homecare.cpp" />
+    <ClCompile Include="httpserver.cpp" />
+    <ClCompile Include="redundancia.cpp" />
+    <ClCompile Include="req_dados.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -97,6 +100,9 @@
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="httpserver.h" />
+    <ClInclude Include="redundancia.h" />
+    <ClInclude Include="req_dados.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
